Fix the z-index?

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -119,7 +119,7 @@ $field_migration_to_the_left: 65px;
 }
 
 #season_transition_message_or_water_entry_failure_message_container {
-  z-index: 1500
+  z-index: 7000
 }
 
 #my_icon {
